2001-03-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (execute_complex_function):
	fixed button presses being passed to other applications with functions
	that only have immediate actions

	* libs/Parse.c (ParseToggleArgument):
	backed out to allow '1' and '0' as true and false because it breaks
	parsing in several places

2001-03-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (do_title_style):
	fixed typo

2001-03-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	* fvwm/virtual.c (unmap_window):
	(map_window):
	disabled ICCCM2 patch that unmaps the client window whenever the frame
	is unmapped since it causes way too mouch trouble. #define
	ICCCM2_UNMAP_WINDOW_PATCH to enable it

	* libs/Graphics.c (ParseGradient):
	added an error message if number of gradient segments does not match
	the given number of colours and percentages
	(ParseGradient):
	(CreateGradientPixmapFromString):
	improved error messages
	(ParseGradient):
	small parsing fixes

2001-03-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (MappedNotOverride):
	* fvwm/builtins.c (RecaptureWindow):
	(Recapture):
	(do_recapture):
	* fvwm/fvwm.c (Reborder):
	(CaptureOneWindow):
	(hide_screen):
	(CaptureAllWindows):
	functions moved to add_window.c

	* fvwm/session.c (RestartInSession):
	fixed windows travelling upon restart with outdated session state file

2001-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (button_states):
	fixed core dump

	* fvwm/events.c (HandleUnmapNotify):
	call XSync() after releasing a client window

2001-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawTitle):
	(RedrawButtons):
	(DrawButton):
	(draw_clipped_decorations):
	vastly improved speed of window motion with pixmap backgrounds in
	titles and buttons
	(get_button_state):
	removed debug statement

	* fvwm/builtins.c (ReadTitleButton):
	* fvwm/fvwm.c (DestroyAllButtons):
	(ResetAllButtons):